# ai-genai-contextual-rag-construction-regulatory-chatbot

./: .gitignore  .python-version  Procfile  README.md  commands.txt  docker-compose.yml  pyproject.toml  requirements.txt
output/: contextualized_content.json  enhanced_chunks.json  pdf_analysis_report.json  pdf_analysis_report.xlsx
scripts/: build_index.py  ingestion_monitor.py  robust_ingestion_manager.py  run_app.sh  run_evaluation.sh  setup_pinecone_index.py  setup_project_structure.py  validate_ingestion_integrity.py  view_metadata.py
src/: api_rag.py  chainlit.md  evaluation_ragas.py  frontend_rag.py  ingestion_manual.py  ingestion_manual_mistral.py  rag_process.py
src/analysis/: apply_chunking_optimizations.py  chunking_analysis.py  duplicate_detector.py  optimized_chunking_test.py  pdf_analyzer.py
src/config/: display_config.py  prompt_config.py
src/embeddings/: embedder.py  embedding_funcs.py  embedding_qdrant.py
src/evaluation/: README.md  README_EVALUATION.md  __init__.py  api_rag.py  config.py  evaluate_rag.py  evaluate_ragas.py  evaluation_ragas.py  run_evaluation.py  sample_questions.json  start_evaluation.py  test_evaluation.py
src/evaluation/evaluation_results/: evaluation_report_20250910_032053.txt  evaluation_results_20250910_032053.csv  evaluation_results_20250910_032053.json
src/evaluation/test_evaluation_results/: evaluation_report_20250910_015530.txt  evaluation_report_20250910_015756.txt  evaluation_results_20250910_015530.csv  evaluation_results_20250910_015530.json  evaluation_results_20250910_015756.csv  evaluation_results_20250910_015756.json
src/ingestion/: chunk_text.py  chunk_text_section.py  clean_text.py  extract_text.py  ingest_funcs.py  ingest_mistral.py
src/llm/: context_llm.py  groq_llm.py  mistral_llm.py  rag_pipeline.py
src/output/: contextualized_content.json  enhanced_chunks_v2_FMDS0200.pdf.json  enhanced_chunks_v2_FMDS0201.pdf.json
src/translation/: translate.py
src/ui/: app.py
src/vector_store/: qdrant_uploader.py
tests/: __init__.py  test_display_config.py  test_english_kb_spanish_qa_workflow.py  test_prompt_config.py  test_translation_integration.py
