[project]
name = "asistente-normativa-prototipo"
version = "0.1.0"
description = "Asistente virtual de normativa en español"
authors = [{ name = "Laren Osorio Toribio", email = "losorio@rcp.pe" }]
requires-python = ">=3.12"

dependencies = [
  "qdrant-client",
  "langchain",
  "ollama",
  "python-dotenv",
  "tqdm",
  "pandas",
  "huggingface_hub",
  "tiktoken",
  "chainlit<2.6.0",
  "langchain-ollama",
  "langchain-community",
  "mistralai",
  "openpyxl",
  "pypdf2",
  "ragas",
  "asyncpg",
  "boto3",
  "translate",
  "psutil",
  "requests"
]

[tool.uv]
managed = true
